backend: database, checks with front